feat:1.4W SOA-确认框 UI用户视觉优化调整

--- a/src/main/resources/views/webconsole/src/styles/element-theme.scss
+++ b/src/main/resources/views/webconsole/src/styles/element-theme.scss
@@ -28,6 +28,7 @@
 
 @use "element-plus/theme-chalk/src/index.scss";
 @use "./element-modal.scss";
+@use "./element-confirm.scss";
 
 /* 全局自定义 Element Plus v-loading 样式 */
 .el-loading-mask {
