feat: 新增Auth域 添加认证管理模块，包含用户登录、注册、会话管理及权限验证功能，重构相关服务和控制器

--- a/blueprint_jpa/src/main/java/com/ksptooi/biz/#{PTALCN}/model/#{PTSTN}Po.java.vm
+++ b/blueprint_jpa/src/main/java/com/ksptooi/biz/#{PTALCN}/model/#{PTSTN}Po.java.vm
@@ -1,18 +1,14 @@
 package com.ksptooi.biz.${ptalcn}.model;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import com.ksptooi.biz.core.service.AuthService;
+import com.ksptooi.biz.auth.service.AuthService;
 import com.ksptooi.commons.utils.IdWorker;
 import jakarta.persistence.*;
 import lombok.Getter;
 import lombok.Setter;
-import org.hibernate.annotations.Comment;
-#foreach ($import in $imports)
+    #foreach ($import in $imports)
 import ${import};
 #end
-
-import java.util.Date;
 
 @Getter
 @Setter
